--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <span class="tag">Full Stack Developer</span>
 
           <p>
-            I am a Full-Stack developer based in Pune, India. I am very
+            I am a Full-Stack developer based in Lahore,Pakistan. I am very
             passionate about improving my coding skills & developing
             applications & websites. Working for myself to improve my skills.
             Love to build Full-Stack clones.
